Overlapping Bug Fixed

--- a/home/style.css
+++ b/home/style.css
@@ -903,7 +903,7 @@ button {
   .footerContent {
     position: relative;
     width: 100vw;
-    height: 80rem;
+    height: 95rem;
     margin: 0 auto;
     padding: 10rem 0;
     display: flex;
